# artdaq_demo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build-single-pkg.yml
artdaq-demo/: CMakeLists.txt
artdaq-demo/ArtModules/: ASCIIDump_module.cc  ArtdaqDemoBuildInfo_module.cc  ArtdaqDemoFragmentNamingService_service.cc  CMakeLists.txt  CheckIntegrity_module.cc  DemoInput_source.cc  DemoViewer_module.cc  EventReporterOutput_module.cc  NthEvent_module.cc  RootApplication_module.cc  ToyDump_module.cc  WFViewer_module.cc
artdaq-demo/ArtModules/fcl/: asciiDump.fcl  checkIntegrity.fcl  toyDump.fcl  wfViewer.fcl
artdaq-demo/BuildInfo/: CMakeLists.txt  GetPackageBuildInfo.hh
artdaq-demo/Generators/: AsciiSimulator.hh  AsciiSimulator_generator.cc  CMakeLists.txt  ToySimulator.hh  ToySimulator_generator.cc  UDPReceiver.hh  UDPReceiver_generator.cc
artdaq-demo/Generators/ToyHardwareInterface/: CMakeLists.txt  ToyHardwareInterface.cc  ToyHardwareInterface.hh
artdaq-demo/RoutingPolicies/: CMakeLists.txt  MisbehaviorTest_policy.cc  NthEvent_policy.cc
artdaq-demo/RoutingPolicies/fcl/: MisbehaviorTest.fcl  NthEvent.fcl
artdaq-demo/TransferPlugins/: CMakeLists.txt  NthEvent_transfer.cc
doc/: CMakeLists.txt
test/: CMakeLists.txt
test/ArtModules/: CMakeLists.txt  driver_with_verification.sh
test/ArtModules/fcl/: driver.fcl  validate.fcl
test/Generators/fcl/: ToySimulator_t.fcl
test/RoutingPolicies/: CMakeLists.txt  NthEvent_policy_t.cc
tools/: CMakeLists.txt  calculate_test_coverage.sh  check_integration_tests.sh  configure_artdaq_database.sh  demo_driver.cc  installArtDaqDemo.sh  quick-mrb-start.sh  quick-spack-start.sh  readfhicl.cc  run_demo.sh  run_demo_hung_online_monitor_example.sh  run_integration_tests.sh  xt_cmd.sh
tools/fcl/: DemoDriverNoDisk.fcl  DemoDriverWithDisk.fcl  TransferInputShmem.fcl  TransferInputShmemWithDelay.fcl  driver_test1.fcl  driver_test1a.fcl  driver_test2.fcl  driver_test3.fcl  driver_test4.fcl  splitter.fcl  test_10Mx3000000_nodisk3.fcl  test_10Mx300000_nodisk4.fcl  test_10Mx30000_binbuf3.fcl  test_10Mx30000_binbuf4.fcl  test_10Mx30000_bindirect3.fcl  test_10Mx30000_binnull3.fcl  test_10Mx30000_binnull4.fcl  test_10Mx30000_root2.fcl  test_10Mx30000_root3.fcl  test_10Mx30000_root3null.fcl  test_10Mx30000_root4.fcl  test_1Mx300000_binnull4.fcl
ups/: product_deps
